--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ html,
   max-width: 1080px;
   margin: 0 auto;
 }
+
+.category-button button {
+  color: #617D98;
+}
+
+
+.filter-header-text {
+  margin-top: 2rem;
+  font-weight: 600;
+  color: #102A42;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+}
