--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,20 @@ html,
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
+
+
 
 .container {
   max-width: 1080px;
   margin: 0 auto;
+  padding: 0rem 1rem;
 }
 
 .category-button button {
   color: #617D98;
 }
-
 
 .filter-header-text {
   margin-top: 2rem;
